kubernetes/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: jongmin.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  personal-website-service
            port:
              number: 80
  - host: minecraft.jongmin.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  minecraft-service
            port:
              number: 80
  - host: resume.jongmin.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  resume-service
            port:
              number: 80
  tls:
  - hosts:
    - jongmin.space
    - minecraft.jongmin.space
    - resume.jongmin.space
    secretName: prod-tls
